# DPKI

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 000000000000_.py  000000000100_.py
backend/csp/: ed25519.py  provider.py  sha256.py
backend/csp/base/: __init__.py  hash.py  keys.py  opts.py
backend/dpki/: backend.py  caservice.py  database.py  models.py  rules.py  utils.py
backend/dpki/ca/: __init__.py  client.py  config.py  utils.py
backend/dpki/chain/: __init__.py  checker.py  keeper.py  utils.py
backend/dpki/chainapp/: __init__.py  certauth.py  checker.py  keeper.py  utils.py
backend/dpki/database/: __init__.py  models.py  repository.py  tables.py
backend/dpki/x509cert/: __init__.py  names.py  template.py  utils.py
backend/names/: __init__.py  dn.py
backend/scripts/: testnet.py  x509gen.py
backend/tests/: first_test.py
frontend/: .gitignore  i18n-extract  package.json  tsconfig.json  vite.config.ts
frontend/messages/: en.json  ru.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: methods.ts  types.ts
frontend/src/components/: BlankLayout.tsx  Welcome.tsx
frontend/src/views/: CreateRequest.tsx
tests/backend/: requirements.txt  test_ca.py  test_cert.py  test_names.py  test_tx.py  test_utils.py
